--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,6 @@
 
 :root {
   --primary: oklch(0.205 0 0);
-
   --cta: #2c2c2c;
   --cta-gold: #fccc41;
   --radius: 0.625rem;
@@ -127,10 +126,10 @@ body {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground; 
   }
   main {
-    @apply mx-auto px-14 flex flex-col gap-8 bg-background h-full max-w-[1400px] pt-10 max-sm:px-2;
+    @apply flex flex-col gap-8 bg-background h-full w-full pt-10 px-20 lg:px-32 max-sm:px-4;
   }
   h1 {
     @apply text-3xl font-bold;
@@ -147,9 +146,6 @@ body {
   .companion-card {
     @apply flex flex-col rounded-4xl border border-black px-4 py-4 gap-5 w-full min-lg:max-w-[410px] justify-between;
   }
-  .subject-badge {
-    @apply bg-black text-white rounded-4xl text-sm px-2 py-1 capitalize;
-  }
   .companion-bookmark {
     @apply px-2 bg-black rounded-4xl flex items-center h-full aspect-square cursor-pointer;
   }
@@ -161,12 +157,6 @@ body {
   }
   .cta-section {
     @apply bg-cta text-white rounded-4xl px-7 py-10 flex flex-col items-center text-center gap-5 w-1/3 max-lg:w-1/2 max-md:w-full;
-  }
-  .cta-badge {
-    @apply bg-cta-gold rounded-4xl px-3 py-1.5 text-black;
-  }
-  .btn-primary {
-    @apply bg-primary text-white rounded-xl cursor-pointer px-4 py-2 flex items-center gap-2;
   }
   .navbar {
     @apply flex items-center justify-between mx-auto w-full px-20 lg:px-32 py-5 bg-white max-sm:px-4;
