--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,7 +129,7 @@ body {
     @apply bg-background text-foreground; 
   }
   main {
-    @apply flex flex-col gap-8 bg-background h-full w-full pt-10 px-20 lg:px-32 max-sm:px-4;
+    @apply flex flex-col gap-8 bg-background h-full w-full mx-auto pt-10 px-20 lg:px-32 max-sm:px-4;
   }
   h1 {
     @apply text-3xl font-bold;
