--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -183,14 +183,10 @@ body {
   }
 
   .user-section {
-    @apply flex flex-col gap-4 w-1/3 max-sm:w-full max-sm:flex-row;
+    @apply flex flex-col gap-5 w-1/3 max-sm:w-full;
   }
   .user-avatar {
     @apply border-2 border-black flex flex-col gap-4 items-center rounded-lg py-8 max-sm:hidden;
-  }
-
-  .btn-mic {
-    @apply border-2 border-black rounded-lg flex flex-col gap-2 items-center py-8 max-sm:py-2 cursor-pointer w-full;
   }
 
   .transcript {
